# tv

./: .env.example  CNAME  Cargo.toml  Dockerfile  Justfile  PRODUCT.md  channels.csv  films.csv  fly.toml  index.html  script.js  styles.css
.github/workflows/: deploy.yml
src/: core.rs  entities.rs  main.rs  store.rs  utils.rs
static/: script.js  styles.css
