[package]
name = "harpertv"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
csv = "1.4.0"
dotenvy = "0.15.7"
jiff = "0.2.23"
maud = { version = "0.27.0", features = ["axum"] }
rand = "0.10.0"
tokio = { version = "1.51.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
